# zkpytoolkit

./: .gitmodules  COPYING  MANIFEST.in  README.md  depr_setup.py  pyproject.toml  test.py
extra/pedersen_generators/: README.md  run.py
extra/pedersen_generators/zokrates_pycrypto/: field.py  params.py
extra/pedersen_generators/zokrates_pycrypto/gadgets/: pedersenHasher.py
notebooks/: zkpytoolkit_demo.ipynb
src/rust/: Cargo.toml
src/rust/src/: compiler.rs  conversions.rs  lib.rs
src/zkpytoolkit/: EMBED.py  __init__.py  input_gen.py  types.py  zkp.py
src/zkpytoolkit/hazmat/: __init__.py
src/zkpytoolkit/hazmat/bindings/: __init__.py
src/zkpytoolkit/stdlib/commitment/pedersen/bls12_381/: commit.py  hash512bitBool.py
src/zkpytoolkit/stdlib/commitment/pedersen/bn256/: commit.py  hash512bitBool.py
src/zkpytoolkit/stdlib/commitment/pedersen/ristretto255/: commit.py  hash512bitBool.py
src/zkpytoolkit/stdlib/commitment/sha256/: commit.py  sha256.py
src/zkpytoolkit/stdlib/ecc/: __init__.py  babyjubjubParams.py  doppioParams.py  edwardsAdd.py  edwardsCompress.py  edwardsParams.py  jubjubParams.py
src/zkpytoolkit/stdlib/hashes/pedersen/: hash256bitBool_jubjub.py  hash256bit_jubjub.py  hash512bit.py  hash512bitBool_babyjubjub.py  hash512bitBool_jubjub.py  hash512bit_babyjubjub.py
src/zkpytoolkit/stdlib/hashes/pedersen/bls12_381/: generators.py  hash512bitBool.py
src/zkpytoolkit/stdlib/hashes/pedersen/bn256/: generators.py  hash512bitBool.py
src/zkpytoolkit/stdlib/hashes/pedersen/ristretto255/: generators.py  hash512bit.py  hash512bitBool.py
src/zkpytoolkit/stdlib/hashes/poseidon/: constants.py  hash.py  poseidon.py
src/zkpytoolkit/stdlib/hashes/sha256/: sha256.py  shaRound.py
src/zkpytoolkit/stdlib/utils/casts/: int_from_bits.py  int_to_bits.py
src/zkpytoolkit/stdlib/utils/multiplexer/: lookup2bit.py  lookup3bitSigned.py
src/zkpytoolkit/stdlib/utils/pack/bool/: nonStrictUnpack256.py  unpack254_unchecked.py  unpack255_unchecked.py
zkif_export/: constraints_0.zkif  header.zkif
