[package]
name = "zkpytoolkit-rust"
version = "0.1.0"
authors = ["Lorenzo Rota"]
edition = "2021"
publish = false
# This specifies the MSRV
rust-version = "1.63.0"

[dependencies]
#once_cell = "1"
#cfg-if = "1"
pyo3 = { version = "0.20", features = ["abi3-py37"] }
rug = { version = "1.11" }
zkpyc = { path = "zkpyc" }
circ = { git = "https://github.com/circify/circ.git", rev = "a586f7f9" }
circ_fields = { git = "https://github.com/circify/circ.git", rev = "a586f7f9" }
circ_opt = { git = "https://github.com/circify/circ.git", rev = "a586f7f9" }
circ_hc = { git = "https://github.com/circify/circ.git", rev = "a586f7f9", default-features = false, features = ["rc", "lru"]}
curve25519-dalek = {version = "3.2.0", features = ["serde"], optional = true}
# cryptography-x509 = { path = "cryptography-x509" }
# cryptography-x509-validation = { path = "cryptography-x509-validation" }
# cryptography-openssl = { path = "cryptography-openssl" }
# pem = { version = "3", default-features = false }
# openssl = "0.10.59"
# openssl-sys = "0.9.95"
# foreign-types-shared = "0.1"
# self_cell = "1"

[build-dependencies]
cc = "1.0.83"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module", "curve25519-dalek"]

[lib]
name = "zkpytoolkit_rust"
crate-type = ["cdylib"]

[profile.release]
overflow-checks = true

[workspace]
members = [
    "zkpyc",
#     "cryptography-openssl",
#     "cryptography-x509",
#     "cryptography-x509-validation",
]